[gd_scene load_steps=17 format=2]

[ext_resource path="res://recursos/Players/bunny2_stand.png" type="Texture" id=1]
[ext_resource path="res://juego/personaje/Personaje.gd" type="Script" id=2]
[ext_resource path="res://recursos/Players/bunny2_walk1.png" type="Texture" id=3]
[ext_resource path="res://recursos/Players/bunny2_walk2.png" type="Texture" id=4]
[ext_resource path="res://recursos/Players/bunny2_jump.png" type="Texture" id=5]
[ext_resource path="res://recursos/SFX/Jump.wav" type="AudioStream" id=6]
[ext_resource path="res://recursos/Items/wing_left.png" type="Texture" id=7]
[ext_resource path="res://recursos/Items/wing_right.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "saltar",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "correr",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 45.3848
height = 55.2967

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 39.375, 6.875 )

[sub_resource type="Animation" id=4]
resource_name = "aclarar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("wing_right:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_left:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "entrar_portal"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteAnimado:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteAnimado:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "oscurecer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("wing_right:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 0.0, 40.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_left:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -40.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wing_right:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("wing_left:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Personaje" type="KinematicBody2D" groups=[
"jugador",
]]
scale = Vector2( 0.5, 0.5 )
z_index = 50
z_as_relative = false
collision_layer = 2
collision_mask = 29
script = ExtResource( 2 )

[node name="wing_right" type="Sprite" parent="."]
visible = false
position = Vector2( 27.4004, -95.8275 )
texture = ExtResource( 8 )
offset = Vector2( 38.5996, -14.1725 )

[node name="wing_left" type="Sprite" parent="."]
visible = false
position = Vector2( -27.0468, -95.474 )
texture = ExtResource( 7 )
offset = Vector2( -38.9532, -14.526 )

[node name="SpriteAnimado" type="AnimatedSprite" parent="."]
position = Vector2( -0.0521081, -100.952 )
frames = SubResource( 1 )
animation = "idle"

[node name="ColisionCuerpo" type="CollisionShape2D" parent="."]
position = Vector2( 0, -73.6653 )
shape = SubResource( 2 )

[node name="ColisionPies" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.875 )
shape = SubResource( 3 )

[node name="AudioSalto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -13.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -274.667 )
z_as_relative = false
current = true
zoom = Vector2( 1.2, 1.2 )
limit_bottom = 1200
drag_margin_v_enabled = true
drag_margin_top = 0.35
drag_margin_bottom = 0.0

[node name="EnfriamientoPowerUpSalto" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aclarar = SubResource( 4 )
anims/default = SubResource( 5 )
anims/entrar_portal = SubResource( 6 )
anims/oscurecer = SubResource( 7 )
anims/volar = SubResource( 8 )

[node name="EnfriamientoPowerUpVolar" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="EnfriamientoPowerUpSalto" to="." method="_on_EnfriamientoPowerUp_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EnfriamientoPowerUpVolar" to="." method="_on_EnfriamientoPowerUpVolar_timeout"]
